Added links and bottom border to navbar

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div id="navbar" class="border-bottom flex flex-row justify-between px-10 py-5 text-xl">
+    <div id="navbar" class="flex flex-row justify-between px-10 py-5 border-b-2 border-blue-300 text-xl">
       <div class="text-2xl">Recipes :)</div>
-      <div class=""><input type="text" placeholder="Search..." /></div>
+      <div class="border-2 border-slate-400 rounded-lg placeholder:pl-5"><input type="text" placeholder="Search..." /></div>
       <ol class="flex flex-row">
-        <li class="px-5">Home</li>
-        <li class="px-5">My recipes</li>
+        <li class="px-5"><a href="#">Home</a></li>
+        <li class="px-5"><a href="#">My recipes</a></li>
         <button class="px-5 border-2 border-lime-400 rounded">Log in</button>
       </div>
     </div>
