Changed button colour

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <ol class="flex flex-row">
         <li class="px-5"><a href="#">Home</a></li>
         <li class="px-5"><a href="#">My recipes</a></li>
-        <button class="px-5 border-2 border-lime-400 rounded">Log in</button>
+        <button class="px-5 border-2 border-lime-400 rounded bg-lime-400 text-white">Log in</button>
       </div>
     </div>
   </body>
