--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
   </head>
   <body>
     <div id="navbar" class="flex flex-row justify-between px-10 py-5 border-b-2 border-blue-300 text-xl">
-      <div class="text-2xl">Recipes :)</div>
-      <div class="border-2 border-slate-400 rounded-lg placeholder:pl-5"><input type="text" placeholder="Search..." /></div>
-      <ol class="flex flex-row">
-        <li class="px-5"><a href="#">Home</a></li>
-        <li class="px-5"><a href="#">My recipes</a></li>
-        <button class="px-5 border-2 border-lime-400 rounded bg-lime-400 text-white">Log in</button>
+      <h1 class="text-2xl">Recipes :)</h1>
+      <input
+        type="text"
+        placeholder="Search..."
+        class="border-2 border-slate-400 rounded-lg placeholder:pl-2 focus:outline-none focus:ring-2"
+      />
+      <div class="flex flex-row">
+        <ol class="flex flex-row">
+          <li class="px-5"><a href="#">Home</a></li>
+          <li class="px-5"><a href="#">My recipes</a></li>
+        </ol>
+        <button class="px-5 py-1 border-2 border-lime-400 rounded bg-lime-400 text-white">Log in</button>
       </div>
     </div>
   </body>
