--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
       <input
         type="text"
         placeholder="Search..."
-        class="border-2 border-slate-400 rounded-lg placeholder:pl-2 focus:outline-none focus:ring-2"
+        class="border-2 border-slate-400 rounded-lg placeholder:pl-2 focus:outline-none focus:ring-2 hover:ring-2"
       />
       <div class="flex flex-row">
         <ol class="flex flex-row">
-          <li class="px-5"><a href="#">Home</a></li>
-          <li class="px-5"><a href="#">My recipes</a></li>
+          <li class="px-5 hover:underline"><a href="#">Home</a></li>
+          <li class="px-5 hover:underline"><a href="#">My recipes</a></li>
         </ol>
-        <button class="px-5 py-1 border-2 border-lime-400 rounded bg-lime-400 text-white">Log in</button>
+        <button class="px-5 py-1 border-2 border-lime-400 rounded bg-lime-400 text-white hover:bg-green-600">
+          Log in
+        </button>
       </div>
     </div>
   </body>
