--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div id="navbar" class="flex flex-row justify-between px-10 py-5 border-b-2 border-blue-300 text-xl">
+    <div id="navbar" class="flex flex-row justify-between px-5 md:px-10 py-5 border-b-2 border-blue-300 text-xl">
+      <button class="block md:hidden px-5 py-1 border-2 border-slate-400 rounded-lg hover:bg-slate-100">Menu</button>
       <h1 class="text-2xl">Recipes :)</h1>
       <input
         type="text"
         placeholder="Search..."
         class="border-2 border-slate-400 rounded-lg placeholder:pl-2 focus:outline-none focus:ring-2 hover:ring-2"
       />
-      <div class="flex flex-row">
+      <div class="hidden md:inline-flex flex-row">
         <ol class="flex flex-row">
           <li class="px-5 hover:underline"><a href="#">Home</a></li>
           <li class="px-5 hover:underline"><a href="#">My recipes</a></li>
         </ol>
-        <button class="px-5 py-1 border-2 border-lime-400 rounded bg-lime-400 text-white hover:bg-green-600">
+        <button class="px-5 py-1 border-2 border-lime-400 rounded-lg bg-lime-400 text-white hover:bg-green-600">
           Log in
         </button>
       </div>
     </div>
+    <section></section>
   </body>
 </html>
