Started adding page content

--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
       </div>
       <button class="block md:hidden px-5 py-1 border-2 border-slate-400 rounded-lg hover:bg-slate-100">Menu</button>
     </div>
-    <section></section>
+    <section id="recipe">
+      <div class="container mx-auto my-10 px-5 md:px-10">
+        <div class="flex flex-col md:flex-row justify-center">
+          <div><img id="food-image" class="border-2 border-red-800 w-96" src="#" alt="Image of food" /></div>
+          <div>
+            <h2 id="title" class="text-2xl">Food title</h2>
+            <p>Text that noone reads...</p>
+          </div>
+        </div>
+        <div class="flex flex-col md:flex-row">
+          <h3>Ingredients</h3>
+          <ul>
+            <li>1 egg</li>
+            <li>200ml milk</li>
+            <li>600g flour</li>
+            <li>50ml oil</li>
+            <li>salt</li>
+            <li>30g sugar</li>
+          </ul>
+          <h3>Method</h3>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
