--- a/index.html
+++ b/index.html
@@ -31,21 +31,30 @@
         <div class="flex flex-col md:flex-row justify-center">
           <div><img id="food-image" class="border-2 border-red-800 w-96" src="#" alt="Image of food" /></div>
           <div>
-            <h2 id="title" class="text-2xl">Food title</h2>
-            <p>Text that noone reads...</p>
+            <h2 id="title" class="text-2xl">Best of the Best Blueberry muffins</h2>
+            <p>
+              Big Blueberry muffins with a crusty sugar topping. A recipe I got from my Grandma. The blueberries and the
+              sweet batter are fabulous together. Favorites of all who have tried them. Quick and easy, made with few
+              ingredients. Remember to use paper liners!
+            </p>
           </div>
         </div>
-        <div class="flex flex-col md:flex-row">
-          <h3>Ingredients</h3>
-          <ul>
-            <li>1 egg</li>
-            <li>200ml milk</li>
-            <li>600g flour</li>
-            <li>50ml oil</li>
-            <li>salt</li>
-            <li>30g sugar</li>
-          </ul>
-          <h3>Method</h3>
+        <div class="flex flex-col md:flex-row justify-evenly">
+          <div class="">
+            <h3 class="text-2xl">Ingredients</h3>
+            <ul class="ml-5 list-disc">
+              <li>1/2 cup unsalted butter</li>
+              <li>1 1/4 cups white sugar</li>
+              <li>1/2 teaspoon salt</li>
+              <li>2 eggs</li>
+              <li>2 cups all-purpose flour, divided</li>
+              <li>2 tsp baking powder</li>
+              <li>1/2 cup buttermilk</li>
+              <li>1 pint fresh blueberries</li>
+              <li>2 tbsp white sugar</li>
+            </ul>
+          </div>
+          <div><h3 class="text-2xl">Method</h3></div>
         </div>
       </div>
     </section>
