Changed content to actual recipe

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <section id="recipe">
       <div class="container mx-auto my-10 px-5 md:px-10">
         <div class="flex flex-col md:flex-row justify-center">
-          <div><img id="food-image" class="border-2 border-red-800 w-96" src="#" alt="Image of food" /></div>
+          <div>
+            <img id="food-image" class="w-96" src="Muffins.jpeg" alt="Image of food" />
+          </div>
           <div>
             <h2 id="title" class="text-2xl">Best of the Best Blueberry muffins</h2>
             <p>
@@ -54,7 +56,25 @@
               <li>2 tbsp white sugar</li>
             </ul>
           </div>
-          <div><h3 class="text-2xl">Method</h3></div>
+          <div>
+            <h3 class="text-2xl">Method</h3>
+            <ol class="ml-5 list-decimal">
+              <li>
+                Position rack in the middle of oven. Preheat oven to 375 degrees F (190 degrees C). Spray the top of a
+                muffin pan with non-stick coating, and line with paper liners.
+              </li>
+              <li>
+                In a large bowl, cream together the butter, 1 1/4 cups sugar and salt until light and fluffy. Beat in
+                the eggs one at a time. Mix together 1 3/4 cup of the flour and baking powder. Beat in the flour mixture
+                alternately with the buttermilk, mixing just until incorporated. Crush 1/4 of the blueberries, and stir
+                into the batter. Mix the rest of the whole blueberries with the remaining 1/4 cup of the flour, and fold
+                into the batter. Scoop into muffin cups. Sprinkle tops lightly with sugar.
+              </li>
+              <li>
+                Bake in preheated oven for 30 minutes, or until golden brown, and tops spring back when lightly tapped.
+              </li>
+            </ol>
+          </div>
         </div>
       </div>
     </section>
