--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="border-b-2 border-blue-300">
       <div id="navbar" class="container mx-auto flex flex-row justify-between px-5 md:px-10 py-5 text-xl">
-        <h1 class="text-2xl">Recipes :)</h1>
+        <h1 class="text-2xl"><a href="#">Recipes :)</a></h1>
         <input
           type="text"
           placeholder="Search..."
