--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
     <section id="recipe">
       <div class="container mx-auto my-10 px-5 md:px-10">
-        <div class="flex flex-col md:flex-row justify-center">
-          <div>
-            <img id="food-image" class="w-96" src="Muffins.jpeg" alt="Image of food" />
+        <div class="flex flex-col md:flex-row justify-center mb-10">
+          <div class="w-full md:w-1/3">
+            <img id="food-image" src="Muffins.jpeg" alt="Image of food" />
           </div>
-          <div>
+          <div class="w-full md:w-2/3 md:px-10">
             <h2 id="title" class="text-2xl">Best of the Best Blueberry muffins</h2>
             <p>
               Big Blueberry muffins with a crusty sugar topping. A recipe I got from my Grandma. The blueberries and the
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="flex flex-col md:flex-row justify-evenly">
-          <div class="">
+          <div class="w-full md:w-1/3">
             <h3 class="text-2xl">Ingredients</h3>
             <ul class="ml-5 list-disc">
               <li>1/2 cup unsalted butter</li>
@@ -59,7 +59,7 @@
               <li>2 tbsp white sugar</li>
             </ul>
           </div>
-          <div>
+          <div class="w-full md:w-2/3 md:px-10">
             <h3 class="text-2xl">Method</h3>
             <ol class="ml-5 list-decimal">
               <li>
