--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img id="food-image" src="Muffins.jpeg" alt="Image of food" />
           </div>
           <div class="w-full md:w-2/3 md:px-10">
-            <h2 id="title" class="text-2xl">Best of the Best Blueberry muffins</h2>
+            <h2 id="title" class="mb-5 text-2xl">Best of the Best Blueberry muffins</h2>
             <p>
               Big Blueberry muffins with a crusty sugar topping. A recipe I got from my Grandma. The blueberries and the
               sweet batter are fabulous together. Favorites of all who have tried them. Quick and easy, made with few
@@ -46,7 +46,7 @@
         </div>
         <div class="flex flex-col md:flex-row justify-evenly">
           <div class="w-full md:w-1/3">
-            <h3 class="text-2xl">Ingredients</h3>
+            <h3 class="mb-5 text-2xl">Ingredients</h3>
             <ul class="ml-5 list-disc">
               <li>1/2 cup unsalted butter</li>
               <li>1 1/4 cups white sugar</li>
@@ -60,7 +60,7 @@
             </ul>
           </div>
           <div class="w-full md:w-2/3 md:px-10">
-            <h3 class="text-2xl">Method</h3>
+            <h3 class="mb-5 text-2xl">Method</h3>
             <ol class="ml-5 list-decimal">
               <li>
                 Position rack in the middle of oven. Preheat oven to 375 degrees F (190 degrees C). Spray the top of a
