Added preparation time and yield. Updated Navbar spacing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <li class="px-5 hover:underline"><a href="#">Home</a></li>
             <li class="px-5 hover:underline"><a href="#">My recipes</a></li>
           </ol>
-          <button class="px-5 py-1 border-2 border-lime-400 rounded-lg bg-lime-400 text-white hover:bg-green-500">
+          <button
+            class="-mt-1 ml-3 px-5 py-1 border-2 border-lime-400 rounded-lg bg-lime-400 text-white hover:bg-green-500"
+          >
             Log in
           </button>
         </div>
@@ -42,6 +44,8 @@
               sweet batter are fabulous together. Favorites of all who have tried them. Quick and easy, made with few
               ingredients. Remember to use paper liners!
             </p>
+            <p class="pt-3"><span class="font-bold">Preparation Time: </span>45 min</p>
+            <p class="pt-3"><span class="font-bold">Yields: </span>12 muffins</p>
           </div>
         </div>
         <div class="flex flex-col md:flex-row justify-evenly">
