Fixed some stuff

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           class="border-2 border-slate-400 rounded-lg placeholder:pl-2 focus:outline-none focus:ring-2 hover:ring-2"
         />
         <div class="hidden md:inline-flex flex-row">
-          <ol class="flex flex-row">
-            <li class="px-5 hover:underline"><a href="#">Home</a></li>
-            <li class="px-5 hover:underline"><a href="#">My recipes</a></li>
-          </ol>
+          <ul class="flex flex-row">
+            <li><a class="p-5 hover:underline" href="#">Home</a></li>
+            <li><a class="p-5 hover:underline" href="#">My recipes</a></li>
+          </ul>
           <button
             class="-mt-1 ml-3 px-5 py-1 border-2 border-lime-400 rounded-lg bg-lime-400 text-white hover:bg-green-500"
           >
