Changed recipe title to be more prominent

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img id="food-image" src="Muffins.jpeg" alt="Image of food" />
           </div>
           <div class="w-full md:w-2/3 md:px-10">
-            <h2 id="title" class="my-5 md:mt-0 text-2xl">Best of the Best Blueberry muffins</h2>
+            <h2 id="title" class="my-5 md:mt-0 text-3xl font-bold">Best of the Best Blueberry muffins</h2>
             <p>
               Big Blueberry muffins with a crusty sugar topping. A recipe I got from my Grandma. The blueberries and the
               sweet batter are fabulous together. Favorites of all who have tried them. Quick and easy, made with few
