--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
           </button>
         </div>
         <button class="block md:hidden px-5 py-1 border-2 border-slate-400 rounded-lg hover:bg-slate-100">Menu</button>
+        <!-- I want the ul's to appear on new lines when I press the Menu button -->
+        <ul class="hidden">
+          <li><a href="#" class="block w-full">My recipes</a></li>
+          <li><a href="#" class="block w-full">Log in</a></li>
+        </ul>
       </div>
     </div>
 
